force-app/main/default/objects/HOMEtracker__Service_File__c/fields/Date_Application_Sent__c.field-meta.xml
<CustomField>
    <fullName>Date_Application_Sent__c</fullName>
    <inlineHelpText>The date when the application was mailed and/or emailed to the applicant.</inlineHelpText>
    <label>Date Application Sent</label>
    <type>Date</type>
</CustomField>