force-app/main/default/objects/HOMEtracker__Service_File__c/fields/Date_Application_Sent_for_Final_Review__c.field-meta.xml
<CustomField>
    <fullName>Date_Application_Sent_for_Final_Review__c</fullName>
    <inlineHelpText>The date the application was sent to another case manager for final review.</inlineHelpText>
    <label>Date Application Sent for Peer Review</label>
    <type>Date</type>
</CustomField>