force-app/main/default/objects/HOMEtracker__Service_File__c/fields/Date_Application_Terminated_Withdrawn__c.field-meta.xml
<CustomField>
    <fullName>Date_Application_Terminated_Withdrawn__c</fullName>
    <inlineHelpText>The date the application was terminated or withdrawn.</inlineHelpText>
    <label>Date Terminated / Withdrawn / On Hold</label>
    <type>Date</type>
</CustomField>