force-app/main/default/objects/HOMEtracker__Service_File__c/fields/Date_Assistance_Invoiced__c.field-meta.xml
<CustomField>
    <fullName>Date_Assistance_Invoiced__c</fullName>
    <inlineHelpText>The date the applicant&apos;s assistance was invoiced.</inlineHelpText>
    <label>Date Assistance Invoiced</label>
    <type>Date</type>
</CustomField>