force-app/main/default/objects/HOMEtracker__Service_File__c/fields/Date_Cert_K_Sent_to_Development__c.field-meta.xml
<CustomField>
    <fullName>Date_Cert_K_Sent_to_Development__c</fullName>
    <description>If the &quot;Required to Send Cert K After Cert?&quot; field on the property&apos;s development is &quot;Yes&quot;, enter the date the Certificate K was sent to the development.</description>
    <inlineHelpText>If the &quot;Required to Send Cert K After Cert?&quot; field on the property&apos;s development is &quot;Yes&quot;, enter the date the Certificate K was sent to the development.</inlineHelpText>
    <label>Date Cert K Sent to Development</label>
    <type>Date</type>
</CustomField>