force-app/main/default/objects/HOMEtracker__Service_File__c/fields/Date_Certification_Expires__c.field-meta.xml
<CustomField>
    <fullName>Date_Certification_Expires__c</fullName>
    <description>Auto calculated: &quot;Eligibility Date&quot; + 180</description>
    <formula>Eligibility_Date__c  + 180</formula>
    <inlineHelpText>Auto calculated: &quot;Eligibility Date&quot; + 180</inlineHelpText>
    <label>Date Certification Expires</label>
    <type>Date</type>
</CustomField>