force-app/main/default/objects/HOMEtracker__Service_File__c/fields/Date_Closing_Invoiced__c.field-meta.xml
<CustomField>
    <fullName>Date_Closing_Invoiced__c</fullName>
    <inlineHelpText>The date the closing was invoiced.</inlineHelpText>
    <label>Date Closing Invoiced</label>
    <type>Date</type>
</CustomField>