force-app/main/default/objects/HOMEtracker__Service_File__c/fields/Date_Invoice_Processed__c.field-meta.xml
<CustomField>
    <fullName>Date_Invoice_Processed__c</fullName>
    <inlineHelpText>The date all withdrawn/terminated apps related to this service file were determined to have been processed.</inlineHelpText>
    <label>Date Withdrawn/Terminated Invoiced</label>
    <type>Date</type>
</CustomField>