force-app/main/default/objects/HOMEtracker__Service_File__c/fields/Date_Invoiced__c.field-meta.xml
<CustomField>
    <fullName>Date_Invoiced__c</fullName>
    <inlineHelpText>The date the certification was invoiced.</inlineHelpText>
    <label>Date Certification Invoiced</label>
    <type>Date</type>
</CustomField>