force-app/main/default/objects/HOMEtracker__Service_File__c/fields/Date_of_Renter_Ed_Certificate__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Renter_Ed_Certificate__c</fullName>
    <inlineHelpText>The date we received the applicants counselling certificate.</inlineHelpText>
    <label>Date of Renter Ed Certificate</label>
    <type>Date</type>
</CustomField>