force-app/main/default/objects/HOMEtracker__Service_File__c/fields/Date_of_Verification_Report__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Verification_Report__c</fullName>
    <description>Date ran employment verification through Equifax Work Number.  Leave blank if not run.</description>
    <inlineHelpText>Date ran employment verification through Equifax Work Number.  Leave blank if not run.</inlineHelpText>
    <label>Equifax  - Date of Verification Report</label>
    <type>Date</type>
</CustomField>