force-app/main/default/objects/HOMEtracker__Service_File__c/fields/Date_Post_Closing_Opt_Out_Email_Sent__c.field-meta.xml
<CustomField>
    <fullName>Date_Post_Closing_Opt_Out_Email_Sent__c</fullName>
    <description>The date the &quot;Post Closing - Opt Out Email&quot; email was sent.</description>
    <inlineHelpText>The date the &quot;Post Closing - Opt Out Email&quot; email was sent.</inlineHelpText>
    <label>Date Post Closing Opt Out Email Sent</label>
    <type>Date</type>
</CustomField>