force-app/main/default/objects/HOMEtracker__Service_File__c/fields/Date_Received_Certificate_K__c.field-meta.xml
<CustomField>
    <fullName>Date_Received_Certificate_K__c</fullName>
    <label>Date Received Certificate K</label>
    <type>Date</type>
</CustomField>