force-app/main/default/objects/HOMEtracker__Service_File__c/fields/Date_SSN_verified__c.field-meta.xml
<CustomField>
    <fullName>Date_SSN_verified__c</fullName>
    <description>Date SSN lookup via Equifax Work Number</description>
    <inlineHelpText>Date SSN lookup via Equifax Work Number. Leave blank if not looked=up</inlineHelpText>
    <label>Equifax - Date SSN  Lookup</label>
    <type>Date</type>
</CustomField>