force-app/main/default/objects/HOMEtracker__Service_File__c/fields/Date_Supporting_Docs_Received__c.field-meta.xml
<CustomField>
    <fullName>Date_Supporting_Docs_Received__c</fullName>
    <description>The date the supporting docs requested in the application invitation were received.</description>
    <inlineHelpText>Enter the date that the supporting docs requested in the application invitation were received.</inlineHelpText>
    <label>Date Supporting Documents Received</label>
    <type>Date</type>
</CustomField>