force-app/main/default/objects/HOMEtracker__Service_File__c/fields/Days_Between_Ready_and_Start__c.field-meta.xml
<CustomField>
    <fullName>Days_Between_Ready_and_Start__c</fullName>
    <formula>IF(ISBLANK(Ready_for_Full_Income_Cert_Date__c ) ,NULL,
IF(ISBLANK(Income_Certification_Start_Date__c ), TODAY()-Ready_for_Full_Income_Cert_Date__c ,
Income_Certification_Start_Date__c -  Ready_for_Full_Income_Cert_Date__c ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Calculated number of days between the Ready for Income Cert date and the Income Certification Start Date</inlineHelpText>
    <label>Days Between Ready and Start</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>