force-app/main/default/objects/HOMEtracker__Service_File__c/fields/Days_In_Progress__c.field-meta.xml
<CustomField>
    <fullName>Days_In_Progress__c</fullName>
    <formula>IF( AND(ISBLANK(Cert_or_Inelig_Date__c), Income_Certification_Start_Date__c &gt; DATE(1900,1,1)),TODAY()-Income_Certification_Start_Date__c,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days In Progress</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>