force-app/main/default/objects/HOMEtracker__Service_File__c/fields/Days_Ready_to_Complete__c.field-meta.xml
<CustomField>
    <fullName>Days_Ready_to_Complete__c</fullName>
    <formula>Cert_or_Inelig_Date__c - Ready_for_Full_Income_Cert_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Number of days between the ready for full income cert date and cert or inelig date.</inlineHelpText>
    <label>Days Ready to Complete</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>