force-app/main/default/objects/HOMEtracker__Service_File__c/fields/Days_Since_Ready_for_Eligibility__c.field-meta.xml
<CustomField>
    <fullName>Days_Since_Ready_for_Eligibility__c</fullName>
    <formula>CASE(MOD(Ready_for_Full_Income_Cert_Date__c  - DATE(1985,6,24),7),
0 , CASE(MOD(Today() - Ready_for_Full_Income_Cert_Date__c ,7),1,2,2,3,3,4,4,5,5,5,6,5,1),
1 , CASE(MOD(Today() - Ready_for_Full_Income_Cert_Date__c ,7),1,2,2,3,3,4,4,4,5,4,6,5,1),
2 , CASE(MOD(Today() - Ready_for_Full_Income_Cert_Date__c ,7),1,2,2,3,3,3,4,3,5,4,6,5,1),
3 , CASE(MOD(Today() - Ready_for_Full_Income_Cert_Date__c ,7),1,2,2,2,3,2,4,3,5,4,6,5,1),
4 , CASE(MOD(Today() - Ready_for_Full_Income_Cert_Date__c ,7),1,1,2,1,3,2,4,3,5,4,6,5,1),
5 , CASE(MOD(Today() - Ready_for_Full_Income_Cert_Date__c ,7),1,0,2,1,3,2,4,3,5,4,6,5,0),
6 , CASE(MOD(Today() - Ready_for_Full_Income_Cert_Date__c ,7),1,1,2,2,3,3,4,4,5,5,6,5,0),
999)
+ (FLOOR((Today() - Ready_for_Full_Income_Cert_Date__c)/7)*5)
-
IF(OR(
NOT(MOD( Ready_for_Full_Income_Cert_Date__c - DATE (2000 ,1, 1) ,7)=0),
NOT(MOD( Ready_for_Full_Income_Cert_Date__c - DATE (2000 ,1, 1) ,7)=1)), 1, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Weekdays Since Ready</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>