force-app/main/default/objects/HOMEtracker__Service_File__c/fields/days_to_process_app_PH__c.field-meta.xml
<CustomField>
    <fullName>days_to_process_app_PH__c</fullName>
    <description>eligibility date- app due date</description>
    <formula>Eligibility_Date__c   -  PHA__Application_Due_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>eligibility date- app due date</inlineHelpText>
    <label>Days to process app from  deadline PH</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>