force-app/main/default/objects/HOMEtracker__Service_File__c/fields/Days_to_process_application__c.field-meta.xml
<CustomField>
    <fullName>Days_to_process_application__c</fullName>
    <description>eligibility date - application complete date</description>
    <formula>Eligibility_Date__c  -  Application_Deadline__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>eligibility date - application complete date</inlineHelpText>
    <label>Days to process app from deadline</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>