force-app/main/default/objects/HOMEtracker__Service_File__c/fields/Delayed_Name_Update__c.field-meta.xml
<CustomField>
    <fullName>Delayed_Name_Update__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Delayed Name Update</label>
    <type>Checkbox</type>
</CustomField>