force-app/main/default/objects/HOMEtracker__Service_File__c/fields/Deposits_Google_Link__c.field-meta.xml
<CustomField>
    <fullName>Deposits_Google_Link__c</fullName>
    <inlineHelpText>Link to the google drive deposits document for determining the classification of unreported or miscellaneous deposits during the income certification process.  This is the internal google drive file URL not the public URL sent to applicants</inlineHelpText>
    <label>Deposits Google Link</label>
    <type>Url</type>
</CustomField>