force-app/main/default/objects/HOMEtracker__Service_File__c/fields/Disposed_Assets__c.field-meta.xml
<CustomField>
    <fullName>Disposed_Assets__c</fullName>
    <inlineHelpText>List any assets disposed of for less than their fair market value during the past two years</inlineHelpText>
    <label>Disposed Assets</label>
    <type>TextArea</type>
</CustomField>