force-app/main/default/objects/HOMEtracker__Service_File__c/fields/Doc_Request_Dates_Passed__c.field-meta.xml
<CustomField>
    <fullName>Doc_Request_Dates_Passed__c</fullName>
    <formula>IF( AND(PHA__Document_Request_Due__c &gt; DATE(1900,1,1),PHA__Document_Request_Due__c &lt; TODAY()),true,
IF( AND(Initial_Document_Request_Due__c &gt; DATE(1900,1,1), Initial_Document_Request_Due__c &lt; TODAY()), true, false))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>If either initial document request due or Document Request Due is before today, this is checked.</inlineHelpText>
    <label>Doc Request Dates Passed</label>
    <type>Checkbox</type>
</CustomField>