force-app/main/default/objects/HOMEtracker__Service_File__c/fields/Document_Corrections_Reminder_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Document_Corrections_Reminder_Start_Date__c</fullName>
    <description>Auto populates/updates whenever the &quot;Document Request Due&quot; field is changed. Triggers daily time-based reminder emails to be sent until a week has passed or the deadline has been reached.</description>
    <inlineHelpText>Auto populates/updates whenever the &quot;Document Request Due&quot; field is changed. Triggers daily time-based reminder emails to be sent until a week has passed or the deadline has been reached.</inlineHelpText>
    <label>Document Corrections Reminder Start Date</label>
    <type>Date</type>
</CustomField>