force-app/main/default/objects/HOMEtracker__Service_File__c/fields/Document_Request_Deadline_Log__c.field-meta.xml
<CustomField>
    <fullName>Document_Request_Deadline_Log__c</fullName>
    <description>A history of all document correction deadlines.</description>
    <inlineHelpText>A history of all document correction deadlines.</inlineHelpText>
    <label>Document Request Deadline Log</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>