force-app/main/default/objects/HOMEtracker__Service_File__c/fields/Eligibility_Date__c.field-meta.xml
<CustomField>
    <fullName>Eligibility_Date__c</fullName>
    <inlineHelpText>The date the certificate of eligibility was issued.</inlineHelpText>
    <label>Eligibility Date</label>
    <type>Date</type>
</CustomField>