force-app/main/default/objects/HOMEtracker__Service_File__c/fields/Eligibility_Priority__c.field-meta.xml
<CustomField>
    <fullName>Eligibility_Priority__c</fullName>
    <inlineHelpText>Enter the order the applications should be resolved.</inlineHelpText>
    <label>Eligibility Priority</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>