force-app/main/default/objects/HOMEtracker__Service_File__c/fields/Eligible_Bedroom_Count__c.field-meta.xml
<CustomField>
    <fullName>Eligible_Bedroom_Count__c</fullName>
    <label>Eligible Bedroom Count</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>