force-app/main/default/objects/HOMEtracker__Service_File__c/fields/Email_Login_Link__c.field-meta.xml
<CustomField>
    <fullName>Email_Login_Link__c</fullName>
    <formula>IF(
ISBLANK( HOMEtracker__Applicant__r.PHA__Email_Login_Link__c ),$Setup.PHA__Housing_Applications__c.PHA__Authentication_URL__c 
,
HOMEtracker__Applicant__r.PHA__Email_Login_Link__c 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Email Login Link</label>
    <type>Text</type>
</CustomField>