force-app/main/default/objects/HOMEtracker__Service_File__c/fields/Entitled_Child_Support_not_Received__c.field-meta.xml
<CustomField>
    <fullName>Entitled_Child_Support_not_Received__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Is any member of your household entitled to child support that he/she is not now receiving?</inlineHelpText>
    <label>Entitled Child Support not Received</label>
    <type>Checkbox</type>
</CustomField>