force-app/main/default/objects/HOMEtracker__Service_File__c/fields/Equifax_work_number_notes__c.field-meta.xml
<CustomField>
    <fullName>Equifax_work_number_notes__c</fullName>
    <description>Notes about Equifax work number lookup/report</description>
    <inlineHelpText>Notes about Equifax work number lookup/report</inlineHelpText>
    <label>Equifax work number notes</label>
    <type>TextArea</type>
</CustomField>