force-app/main/default/objects/HOMEtracker__Service_File__c/fields/Exclude_from_Duration_Metrics__c.field-meta.xml
<CustomField>
    <fullName>Exclude_from_Duration_Metrics__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check here to remove this service file from consideration of duration-based metrics.</inlineHelpText>
    <label>Exclude from Duration Metrics</label>
    <type>Checkbox</type>
</CustomField>