force-app/main/default/objects/HOMEtracker__Service_File__c/fields/Existing_Mortgage_Balance__c.field-meta.xml
<CustomField>
    <fullName>Existing_Mortgage_Balance__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Is there a balance mortgage on the property?</inlineHelpText>
    <label>Existing Mortgage Balance</label>
    <type>Checkbox</type>
</CustomField>