force-app/main/default/objects/HOMEtracker__Service_File__c/fields/Existing_Owner_Tenant_Cert_Recert__c.field-meta.xml
<CustomField>
    <fullName>Existing_Owner_Tenant_Cert_Recert__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If checked, this is for the initial certification or recertification of an existing owner or tenant.</description>
    <inlineHelpText>If checked, this is for the initial certification or recertification of an existing owner or tenant.</inlineHelpText>
    <label>Existing Owner/Tenant Cert/Recert</label>
    <type>Checkbox</type>
</CustomField>