force-app/main/default/objects/HOMEtracker__Service_File__c/fields/Expected_Employment_in_Next_Year__c.field-meta.xml
<CustomField>
    <fullName>Expected_Employment_in_Next_Year__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Does any member of your household who does not have job, expect to seek full or part time employment in the next year?</inlineHelpText>
    <label>Expected Employment in Next Year</label>
    <type>Checkbox</type>
</CustomField>