force-app/main/default/objects/HOMEtracker__Service_File__c/fields/Expected_Leave_of_Absence_in_Next_Year__c.field-meta.xml
<CustomField>
    <fullName>Expected_Leave_of_Absence_in_Next_Year__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Is any member of your household expecting to take a leave of absence from work due to lay-off, medical, maternity or military leave in the next year?</inlineHelpText>
    <label>Expected Leave of Absence in Next Year</label>
    <type>Checkbox</type>
</CustomField>