force-app/main/default/objects/HOMEtracker__Service_File__c/fields/Financing_Home__c.field-meta.xml
<CustomField>
    <fullName>Financing_Home__c</fullName>
    <label>Financing Home?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>