force-app/main/default/objects/HOMEtracker__Service_File__c/fields/Find_Current_Lease__c.field-meta.xml
<CustomField>
    <fullName>Find_Current_Lease__c</fullName>
    <label>Find Current Lease</label>
    <summarizedField>Leases__c.Year_Then_ID__c</summarizedField>
    <summaryForeignKey>Leases__c.Service_file__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>