force-app/main/default/objects/HOMEtracker__Service_File__c/fields/First_Approved_Increase_Year__c.field-meta.xml
<CustomField>
    <fullName>First_Approved_Increase_Year__c</fullName>
    <formula>If(Post_2014_Inc_Adoption_Date__c &lt; $Setup.Rental_Increases__c.X2014_Start__c, TEXT(YEAR($Setup.Rental_Increases__c.X2014_Start__c)),
If(Post_2014_Inc_Adoption_Date__c &lt; $Setup.Rental_Increases__c.X2015_Start__c, TEXT(YEAR($Setup.Rental_Increases__c.X2015_Start__c)),
If(Post_2014_Inc_Adoption_Date__c &lt; $Setup.Rental_Increases__c.X2016_Start__c, TEXT(YEAR($Setup.Rental_Increases__c.X2016_Start__c)),
If(Post_2014_Inc_Adoption_Date__c &lt; $Setup.Rental_Increases__c.X2017_Start__c, TEXT(YEAR($Setup.Rental_Increases__c.X2017_Start__c)),
If(Post_2014_Inc_Adoption_Date__c &lt; $Setup.Rental_Increases__c.X2018_Start__c, TEXT(YEAR($Setup.Rental_Increases__c.X2018_Start__c)),
If(Post_2014_Inc_Adoption_Date__c &lt; $Setup.Rental_Increases__c.X2019_Start__c, TEXT(YEAR($Setup.Rental_Increases__c.X2019_Start__c)),&quot;N/A&quot;))))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>First Approved 2014+ Increase Year</label>
    <type>Text</type>
</CustomField>