force-app/main/default/objects/HOMEtracker__Service_File__c/fields/Folder_Maker_Calc__c.field-meta.xml
<CustomField>
    <fullName>Folder_Maker_Calc__c</fullName>
    <formula>&apos;md &quot;&apos;&amp;

HOMEtracker__Property__r.Municipality_Name__c 
&amp;&apos;&quot;/&quot;&apos;&amp;
 HOMEtracker__Property__r.Development_address__r.Name
&amp;&apos;&quot;/&quot;&apos;&amp;
HOMEtracker__Property__r.Name
&amp;&apos;&quot;/&quot;&apos;&amp;
Name
&amp;&apos;&quot;&apos;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Folder Maker Calc</label>
    <type>Text</type>
</CustomField>