force-app/main/default/objects/HOMEtracker__Service_File__c/fields/FormAssembly_Response__c.field-meta.xml
<CustomField>
    <fullName>FormAssembly_Response__c</fullName>
    <label>FormAssembly Response</label>
    <type>Url</type>
</CustomField>