force-app/main/default/objects/HOMEtracker__Service_File__c/fields/Full_Address__c.field-meta.xml
<CustomField>
    <fullName>Full_Address__c</fullName>
    <formula>HOMEtracker__Property__r.Name&amp;BR()&amp;HOMEtracker__Property__r.HOMEtracker__City__c&amp;&quot;, &quot;&amp;HOMEtracker__Property__r.HOMEtracker__State__c&amp;&quot; &quot;&amp;HOMEtracker__Property__r.HOMEtracker__Postal_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Full Address</label>
    <type>Text</type>
</CustomField>