force-app/main/default/objects/HOMEtracker__Service_File__c/fields/Full_App_Reminder_Date__c.field-meta.xml
<CustomField>
    <fullName>Full_App_Reminder_Date__c</fullName>
    <description>Used to trigger full app reminder emails.</description>
    <inlineHelpText>Used to trigger full app reminder emails.</inlineHelpText>
    <label>Full App Reminder Date</label>
    <type>Date</type>
</CustomField>