force-app/main/default/objects/HOMEtracker__Service_File__c/fields/Full_App_Reminder_Email_Log__c.field-meta.xml
<CustomField>
    <fullName>Full_App_Reminder_Email_Log__c</fullName>
    <description>Shows a log of reminder emails that is auto updated as they are sent out.</description>
    <inlineHelpText>Shows a log of reminder emails that is auto updated as they are sent out.</inlineHelpText>
    <label>Full App Reminder Email Log</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>