force-app/main/default/objects/HOMEtracker__Service_File__c/fields/Google_Tracker_Link_CALC__c.field-meta.xml
<CustomField>
    <fullName>Google_Tracker_Link_CALC__c</fullName>
    <formula>HOMEtracker__Property__r.Google_Tracker_Link__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Takes the Google Tracker Link field from the property</inlineHelpText>
    <label>Google Tracker Link CALC</label>
    <type>Text</type>
</CustomField>