force-app/main/default/objects/HOMEtracker__Service_File__c/fields/Hoboken_Workforce_Program_Warning__c.field-meta.xml
<CustomField>
    <fullName>Hoboken_Workforce_Program_Warning__c</fullName>
    <description>Calculated when the service file is updated.</description>
    <inlineHelpText>Calculated when the service file is updated.</inlineHelpText>
    <label>Hoboken Workforce Program</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>