force-app/main/default/objects/HOMEtracker__Service_File__c/fields/HOMEtracker__Actual_Housing_Ratio__c.field-meta.xml
<CustomField>
    <fullName>HOMEtracker__Actual_Housing_Ratio__c</fullName>
    <description>Auto-calculated. Total Monthly Housing Costs divided by Gross Monthly Income.</description>
    <formula>IF(HOMEtracker__Gross_Monthly_Income__c &gt; 0, HOMEtracker__Total_Monthly_Housing_Costs__c /  HOMEtracker__Gross_Monthly_Income__c, null)</formula>
    <inlineHelpText>Auto-calculated. Total Monthly Housing Costs divided by Gross Monthly Income.</inlineHelpText>
    <label>Actual Housing Ratio</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>