force-app/main/default/objects/HOMEtracker__Service_File__c/fields/HOMEtracker__AMI__c.field-meta.xml
<CustomField>
    <fullName>HOMEtracker__AMI__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Please note: The data stored in this field is linked to the HomeKeeper National Data Hub. The AMI record used to certify the income of this applicant household. This may or may not correlate with the calendar year. 

Tip: For easy reference, include HUD Year and Area in the AMI Name on the AMI record. For example, &quot;2015 Alameda County AMI.&quot;</description>
    <inlineHelpText>The AMI record used to certify the income of this applicant household. This may or may not correlate with the calendar year. 

Tip: For easy reference, include HUD Year and Area in the AMI Name on the AMI record. For example, &quot;2015 Alameda County AMI.&quot;</inlineHelpText>
    <label>AMI</label>
    <referenceTo>HOMEtracker__AMI__c</referenceTo>
    <relationshipLabel>Services</relationshipLabel>
    <relationshipName>Services</relationshipName>
    <type>Lookup</type>
</CustomField>