force-app/main/default/objects/HOMEtracker__Service_File__c/fields/HOMEtracker__AMI_for_Family_Size__c.field-meta.xml
<CustomField>
    <fullName>HOMEtracker__AMI_for_Family_Size__c</fullName>
    <description>Auto-calculated. 100% of Area Mean Income (AMI) for this service file&apos;s household size. This is the HUD AMI for the AMI record selected in the AMI field, weighted for family size.  Copies to Certified AMI when the Certify Income button is pressed.</description>
    <inlineHelpText>Auto-calculated. 100% of Area Mean Income (AMI) for this service file&apos;s household size. This is the HUD AMI for the AMI record selected in the AMI field, weighted for family size.  Copies to Certified AMI when the Certify Income button is pressed.</inlineHelpText>
    <label>AMI for Household Size</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>