force-app/main/default/objects/HOMEtracker__Service_File__c/fields/HOMEtracker__Annual_Income_Eligibility__c.field-meta.xml
<CustomField>
    <fullName>HOMEtracker__Annual_Income_Eligibility__c</fullName>
    <description>Auto-calculated. This is the sum of all Income Sources EXCEPT where &quot;Do Not Include in Eligibility Income&quot; is checked.</description>
    <inlineHelpText>Auto-calculated. This is the sum of all Income Sources EXCEPT where &quot;Do Not Include in Eligibility Income&quot; is checked.</inlineHelpText>
    <label>Annual Income (Eligibility)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>