force-app/main/default/objects/HOMEtracker__Service_File__c/fields/HOMEtracker__Applicant__c.field-meta.xml
<CustomField>
    <fullName>HOMEtracker__Applicant__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Autofills from the Application Household Member record with the Application Role set to Primary Applicant.</description>
    <inlineHelpText>Autofills from the Application Household Member record with the Application Role set to Primary Applicant.</inlineHelpText>
    <label>Applicant</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Services (Applicant)</relationshipLabel>
    <relationshipName>R00N60000001ScFBEA0</relationshipName>
    <type>Lookup</type>
</CustomField>