force-app/main/default/objects/HOMEtracker__Service_File__c/fields/HOMEtracker__Applicant_City__c.field-meta.xml
<CustomField>
    <fullName>HOMEtracker__Applicant_City__c</fullName>
    <formula>HOMEtracker__Applicant__r.OtherCity</formula>
    <label>Applicant City (Formula)</label>
    <type>Text</type>
</CustomField>