force-app/main/default/objects/HOMEtracker__Service_File__c/fields/HOMEtracker__Applicant_County__c.field-meta.xml
<CustomField>
    <fullName>HOMEtracker__Applicant_County__c</fullName>
    <formula>HOMEtracker__Applicant__r.HOMEtracker__Home_County__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Applicant County (Formula)</label>
    <type>Text</type>
</CustomField>