force-app/main/default/objects/HOMEtracker__Service_File__c/fields/HOMEtracker__Applicant_County_at_Application__c.field-meta.xml
<CustomField>
    <fullName>HOMEtracker__Applicant_County_at_Application__c</fullName>
    <description>Please note: The data stored in this field is linked to the HomeKeeper National Data Hub. Auto-fills when the zip code is entered. The Applicant&apos;s county at the time of application.</description>
    <inlineHelpText>Auto-fills when the zip code is entered. The Applicant&apos;s county at the time of application.</inlineHelpText>
    <label>Applicant County</label>
    <length>100</length>
    <type>Text</type>
</CustomField>