force-app/main/default/objects/HOMEtracker__Service_File__c/fields/HOMEtracker__Applicant_Late_Payment_History__c.field-meta.xml
<CustomField>
    <fullName>HOMEtracker__Applicant_Late_Payment_History__c</fullName>
    <description>&quot;How many times have you been late with your bill payments in the last year?&quot; Added for 2012 CHIP evaluation.</description>
    <inlineHelpText>&quot;How many times have you been late with your bill payments in the last year?&quot;</inlineHelpText>
    <label>Applicant Late Payment History</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Never</fullName>
            </value>
            <value>
                <fullName>Once</fullName>
            </value>
            <value>
                <fullName>2-3 times</fullName>
            </value>
            <value>
                <fullName>4 or more times</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>