force-app/main/default/objects/HOMEtracker__Service_File__c/fields/HOMEtracker__Applicant_Past_Foreclosure__c.field-meta.xml
<CustomField>
    <fullName>HOMEtracker__Applicant_Past_Foreclosure__c</fullName>
    <description>&quot;Have you ever been involved in the foreclosure process?&quot; This field was added for the 2012 CHIP Evaluation.</description>
    <inlineHelpText>&quot;Have you ever been involved in the foreclosure process?&quot;</inlineHelpText>
    <label>Applicant Past Foreclosure</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>