force-app/main/default/objects/HOMEtracker__Service_File__c/fields/HOMEtracker__Applicant_Past_Foreclosure_Notice_Date__c.field-meta.xml
<CustomField>
    <fullName>HOMEtracker__Applicant_Past_Foreclosure_Notice_Date__c</fullName>
    <description>&quot;If yes, what was the date of your first notice of foreclosure?&quot; This field was added for the 2012 CHIP Evaluation. Goes with Applicant Past Foreclosure.</description>
    <inlineHelpText>&quot;If yes, what was the date of your first notice of foreclosure?&quot;</inlineHelpText>
    <label>Applicant Past Foreclosure Notice Date</label>
    <type>Date</type>
</CustomField>